torrents/experiments/exatorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exatorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/24,10.0.4.0/24,1.2.3.4
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - exatorrent.example.duckdns.org
    secretName: exatorrent.example.duckdns.org-secret-staging
  rules:
  - host: exatorrent.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exatorrent-service
            port:
              number: 80
